--- a/LayoutEditor/appsettings.json
+++ b/LayoutEditor/appsettings.json
@@ -1,8 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "Elements": {
+        "name1": "1",
+        "name2": "2"
     }
-  },
-  "AllowedHosts": "*"
+
 }
